# excel-handler

./: .gitignore  abstract.py  claude.md  main.py  pyproject.toml  pytest.ini  sample.xlsx  table_template_examples.md
docs/: api-reference.md  architecture.md  development.md  testing.md
excel/: __init__.py  _types.py  _utils.py  cell_reader.py  data_extractor.py  exceptions.py  protocols.py  reader.py  table_reader.py  template_reader.py  template_writer.py  utils.py
tests/: conftest.py  test_cell_reader.py  test_merged_cells_dimensions.py  test_table_reader.py  test_template_reader.py  test_template_writer.py
tests/fixtures/: anchored_cells.xlsx  bug-on-insert.xlsx  create_fixtures.py  empty_table.xlsx  merged_cells.xlsx  multiple_sheets.xlsx  multiple_tables.xlsx  no_headers.xlsx  offset_table.xlsx  simple_table.xlsx  table_style_output.xlsx  table_style_test.xlsx  template.xlsx  template_collision.xlsx  template_combo_left_with_merges.xlsx  template_combo_outer_merges_below.xlsx  template_combo_scalar_with_outer.xlsx  template_combo_triple_adjacent_merges.xlsx  template_combo_two_outer_tables.xlsx  template_complex_merges.xlsx  template_data_col_vertical_merge.xlsx  template_empty_outer_style_first.xlsx  template_fill_global.xlsx  template_fill_lower_zone.xlsx  template_fill_per_col.xlsx  template_fill_sorted_outer_lower_zone.xlsx  template_image.xlsx  template_left_join.xlsx  template_master.xlsx  template_merge_preservation.xlsx  template_placeholder_outer.xlsx  template_positional_fill.xlsx  template_record.xlsx  template_sorted_outer_asc.xlsx  (+10 more)
